--- a/src/css/general.css
+++ b/src/css/general.css
@@ -14,6 +14,14 @@
   top: -50%;
 }
 
+#clock-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 14rem;
+  }
+
 /* handling rezising for desktop */
 @media (max-width: 1400px) {
   #hours-andPhotos-container {
@@ -29,10 +37,6 @@
     margin-bottom: 5rem;
   }
 
-  #clock-icon {
-    right: 35%;
-  }
-
   .swordposition {
     top: -30%;
   }
@@ -41,12 +45,6 @@
 @media (max-width: 1049px) {
   #hours-container {
     width: 410px;
-  }
-
-  #clock-icon {
-    right: 22%;
-    top: 29%;
-    font-size: 14rem;
   }
 }
 
@@ -61,10 +59,14 @@
 
 /* handling rezising for iphone */
 
-@media (max-width: 431px) and (max-height: 933px) {
+@media (max-width: 445px) and (max-height: 933px) {
   #day-hours > li {
     flex-direction: row;
     margin-bottom: 1rem;
+  }
+
+  #hours-container {
+    width: 100%;
   }
 
   #hours-andPhotos-container > img {
@@ -73,5 +75,12 @@
 
   .swordposition {
     top: 0%;
+  }
+}
+
+/* really tight display */
+@media (max-width: 445px) {
+  #day-hours > li {
+    font-size: 0.8rem;
   }
 }
