--- a/src/css/monthlymenu.css
+++ b/src/css/monthlymenu.css
@@ -20,6 +20,14 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* centering the white logo image behind the 'Add Category' form */
+#white-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* rezising */
 @media (max-width: 1360px) {
 
@@ -53,6 +61,20 @@
   #category-list-which-expands-container {
     width: 380px;
   }
+
+  /* elements from add category form */
+  #create-and-p-wrapper {
+    flex-direction: column;
+  }
+
+  #create-and-p-wrapper > button {
+    margin-top: 1rem
+  }
+
+  #create-and-p-wrapper > label {
+    margin-top: 1rem
+  }
+  /* elements from add category form */
 }
 
 @media (max-width: 880px) {
